--- a/ReproducerApp/ios/Podfile
+++ b/ReproducerApp/ios/Podfile
@@ -23,6 +23,9 @@ target 'ReproducerApp' do
     :app_path => "#{Pod::Config.instance.installation_root}/.."
   )
 
+#   pod 'react-native-camera', path: '../src/base/react-native-camera'
+
+
   target 'ReproducerAppTests' do
     inherit! :complete
     # Pods for testing
